--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
-    "next": "13.4.8",
+    "next": "^13.4.8",
     "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.1",
     "tailwindcss": "3.3.2"
   }
 }
